--- a/singleplayer.html
+++ b/singleplayer.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <button id="startAI">TOGGLE AI</button>
-    <div id="game"></div>
 
+    <div id="game"></div>
+    <div id="backgroundText"></div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="JS/main.js"></script>
 </body>
