Добавлен полноценный одиночный режим, но не получилось сделать режим с ботом или друг против друга

--- a/vsbot.html
+++ b/vsbot.html
@@ -14,7 +14,7 @@
     <button id="backToMenuBtn">Обратно в меню</button>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="JS/one_player_mode.js"></script>
+<script src="JS/vs_ai.js"></script>
 
 <script>
     document.getElementById("backToMenuBtn").addEventListener("click", function() {
