--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 </head>
 <body>
 
-<h1>Карточная игра на память, !!Это не финальная, версия, если можно я хочу взять это как проект на курсовую!!</h1>
-<a href="singleplayer.html" class="button">Играть</a>
-<a href="#" class="button">Under Construction</a>
-
+<h1>Карточная игра на память, !!Это не финальная, версия!!</h1>
+<a href="vsbot.html" class="button">Играть против ИИ Under Construction</a>
+<a href="singleplayer.html" class="button">Одиночная игра на приз</a>
+<a href="#" class="button">Сложная игра с одной жизнью, с таблицей лидеров! Under Construction</a>
+<a href="#" class="button">Игра против другого игрока Under Construction</a>
 </body>
 </html>
