--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <h1>Карточная игра на память, !!Это не финальная, версия!!</h1>
 <a href="vsbot.html" class="button">Играть против ИИ Under Construction</a>
-<a href="singleplayer.html" class="button">Одиночная игра на приз</a>
+<a href="test.html" class="button">Одиночная игра на приз</a>
 <a href="#" class="button">Сложная игра с одной жизнью, с таблицей лидеров! Under Construction</a>
 <a href="#" class="button">Игра против другого игрока Under Construction</a>
 </body>
