--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Memory Card Game</title>
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="css/style1.css">
   </head>
   <body>
     <h1>Memory Cards</h1>
@@ -12,6 +12,8 @@
     <p>Score: <span class="score"></span></p>
     <div class="actions">
         <button onclick="restart()">Restart</button>
+        <button onclick="flipall()">Show Cards</button>
+        <button onclick="next()" class="grayed">Next Row</button>
     </div>
     <script src="JS/one_player_mode.js"></script>
   </body>
