--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 </head>
 <body>
 
-<h1>Карточная игра на память, !!Это не финальная, версия!!</h1>
-<a href="vsbot.html" class="button">Играть против ИИ Under Construction</a>
-<a href="singleplayer.html" class="button">Одиночная игра на приз</a>
+<h1>Карточная игра на память</h1>
+<a href="singleplayer.html" class="button">Одиночная игра</a>
 <a href="#" class="button">Сложная игра с одной жизнью, с таблицей лидеров! Under Construction</a>
-<a href="#" class="button">Игра против другого игрока Under Construction</a>
+<a href="twoplayer.html" class="button">Игра против другого игрока Under Construction</a>
+<a href="vsbot.html" class="button">Играть против ИИ Under Construction</a>
 </body>
 </html>
