--- a/twoplayer.html
+++ b/twoplayer.html
@@ -9,7 +9,7 @@
     <h1>Memory Cards</h1>
     <div class="grid-container">
     </div>
-    <p>Score: <span class="score"></span>  Health: <span class="health"></span></p>
+    <p>Score: <span class="score"></span>  Health: <span class="health"></span> <br> Score P2: <span class="score2"></span> Health P2: <span class="health2"></span></p>
     <div class="actions">
         <button onclick="restart()">Restart</button>
         <button onclick="flipall()">Show Cards</button>
