Two player mode done

--- a/twoplayer.html
+++ b/twoplayer.html
@@ -9,12 +9,12 @@
     <h1>Memory Cards</h1>
     <div class="grid-container">
     </div>
-    <p>Score: <span class="score"></span>  Health: <span class="health"></span> <br> Score P2: <span class="score2"></span> Health P2: <span class="health2"></span></p>
+    <p>Score: <span class="score"></span>  Health: <span class="health"></span> <br> Score P2: <span class="scor"></span> Health P2: <span class="healt"></span></p>
     <div class="actions">
         <button onclick="restart()">Restart</button>
         <button onclick="flipall()">Show Cards</button>
         <button onclick="next()" class="disable , gray" >Next Row</button>
     </div>
-    <script src="JS/one_player_mode.js"></script>
+    <script src="JS/two_player_mode.js"></script>
   </body>
 </html>
