--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
 <h1>Карточная игра на память</h1>
 <a href="singleplayer.html" class="button">Одиночная игра</a>
-<a href="#" class="button">Сложная игра с одной жизнью, с таблицей лидеров! Under Construction</a>
-<a href="twoplayer.html" class="button">Игра против другого игрока Under Construction</a>
+<a href="twoplayer.html" class="button">Игра против другого игрока</a>
 <a href="vsbot.html" class="button">Играть против ИИ Under Construction</a>
 </body>
 </html>
