--- a/twoplayer.html
+++ b/twoplayer.html
@@ -14,6 +14,8 @@
         <button onclick="restart()">Restart</button>
         <button onclick="flipall()">Show Cards</button>
         <button onclick="next()" class="disable , gray" >Next Row</button>
+        <br>
+        <a href="index.html"><button>Menu</button></a>
     </div>
     <script src="JS/two_player_mode.js"></script>
   </body>
