--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
 <h1>Карточная игра на память</h1>
 <a href="singleplayer.html" class="button">Одиночная игра</a>
-<a href="twoplayer.html" class="button">Игра против другого игрока</a>
-<a href="vsbot.html" class="button">Играть против ИИ Under Construction</a>
+<a href="twoplayer.html" class="button">Играть против другого игрока</a>
+<a href="vsbot.html" class="button">Играть против ИИ</a>
+
+<a href="vsbot (very easy).html" class="button">Играть против ИИ (Легкая сложность)</a>
 </body>
 </html>
