--- a/vsbot (very easy).html
+++ b/vsbot (very easy).html
@@ -25,6 +25,6 @@
         <br>
         <a href="index.html"><button>Menu</button></a>
     </div>
-    <script src="JS/vs_ai(NEW).js"></script>
+    <script src="JS/vs_ai(EASY).js"></script>
   </body>
 </html>
