--- a/singleplayer.html
+++ b/singleplayer.html
@@ -6,12 +6,19 @@
     <link rel="stylesheet" href="css/style1.css">
   </head>
   <body>
-    
+    <audio autoplay="autoplay" id="myaudio">
+      <source src="Contents/science-documentary-169621.mp3" />     
+  </audio>
+  <script>
+    var audio = document.getElementById("myaudio");
+    audio.volume = 0.1;
+  </script>
+    <div class="screen hide"> <h2>You lose!</h2> <p>Score: <span class="score_end"></span></p> <div class="actions"><button onclick="restart()">Restart</button></div></div>
     <h1>Memory Cards</h1>
     <div class="grid-container">
     </div>
     <p>Score: <span class="score"></span>  Health: <span class="health"></span></p>
-    <div class="screen hide"> <h2>You lose!</h2> <p>Score: <span class="score"></span></p> <div class="actions"><button onclick="restart()">Restart</button></div></div>
+    
     <div class="actions">
         <button onclick="restart()">Restart</button>
         <button onclick="flipall()">Show Cards</button>
